@@ -33,6 +33,8 @@ else {
 
 @orbsvcs_core_dirs = ("$ACE_ROOT\\TAO\\orbsvcs\\orbsvcs");
 
+@dance_core_dirs = ("$ACE_ROOT\\TAO\\DAnCE");
+
 @ciao_core_dirs = ("$ACE_ROOT\\TAO\\CIAO");
 
 $debug = 0;
@@ -158,6 +160,7 @@ sub Build_All ()
     push @directories, @ace_core_dirs;
     push @directories, @tao_core_dirs;
     push @directories, @orbsvcs_core_dirs;
+    push @directories, @dance_core_dirs;
     push @directories, @ciao_core_dirs;
 
     print STDERR "First pass (libraries)\n" if ($print_status == 1);
@@ -219,6 +222,7 @@ sub Build_All_VC7 ()
     push @directories, @ace_core_dirs;
     push @directories, @tao_core_dirs;
     push @directories, @orbsvcs_core_dirs;
+    push @directories, @dance_core_dirs;
     push @directories, @ciao_core_dirs;
 
     print STDERR "First pass (libraries)\n" if ($print_status == 1);
@@ -303,6 +307,7 @@ while ( $#ARGV >= 0  &&  $ARGV[0] =~ /^(-|\/)/ )
         push @directories, @ace_core_dirs;
         push @directories, @tao_core_dirs;
         push @directories, @orbsvcs_core_dirs;
+        push @directories, @dance_core_dirs;
         push @directories, @ciao_core_dirs;
     }
     elsif ($ARGV[0] =~ '-ALL') {# Build the CIAO and related
